@startuml

title __CONTROLLERS's Class Diagram__\n

  package main {
    package main.controllers {
      class CarController {
          - delay : int
          - timer : Timer
          - factory : VehicleFactory
          ~ cars : ArrayList<Car>
          - changeDirection()
          - calculateIfOutOfBounds()
          + gas()
          + brake()
          + startCars()
          + stopCars()
          + getCars()
          + setTurboOn()
          + setTurboOff()
          + liftBeds()
          + lowerBeds()
      }
    }
  }
  

  package main {
    package main.controllers {
      class TimerListener {
          + actionPerformed()
      }
    }
  }
  
  CarController o-- VehicleFactory : factory
  CarController o-- CarView : frame
  CarController +-down- TimerListener
  TimerListener -up-|> ActionListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
